--- a/TourGuide2_microService_GpsUtil/src/main/resources/application.properties
+++ b/TourGuide2_microService_GpsUtil/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=microservice-gpsUtil
 
 server.port= 9001
+
+eureka.client.serviceUrl.defaultZone= http://localhost:9102/eureka/
