--- a/TourGuide2_microService_GpsUtil/pom.xml
+++ b/TourGuide2_microService_GpsUtil/pom.xml
@@ -70,6 +70,10 @@
 				spring-cloud-starter-netflix-eureka-client
 			</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
