test performance fonctionne

--- a/TourGuide2_microService_GpsUtil/src/main/resources/application.properties
+++ b/TourGuide2_microService_GpsUtil/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.port= 9001
 
 eureka.client.serviceUrl.defaultZone= http://localhost:9102/eureka/
 eureka.client.fetchRegistry=true
+Ribbon.eureka.enabled=true
+
+microservice-gpsUtil.ribbon.listOfServers = http://localhost:9001
