--- a/TourGuide2_microService_GpsUtil/pom.xml
+++ b/TourGuide2_microService_GpsUtil/pom.xml
@@ -29,7 +29,7 @@
 	       <artifactId>com.gpsUtil</artifactId>  
 	       <version>1.0</version> 
 	      <scope>system</scope>
-	      <systemPath>${project.basedir}/libs/gpsUtil.jar</systemPath>
+	      <systemPath>${basedir}/lib/gpsUtil.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -110,7 +110,7 @@
   	</reporting>
   	
   	<build>
-		<plugins>
+		<plugins>   
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
