--- a/TourGuide2_microService_GpsUtil/pom.xml
+++ b/TourGuide2_microService_GpsUtil/pom.xml
@@ -32,6 +32,11 @@
 	      <systemPath>${basedir}/lib/gpsUtil.jar</systemPath>
 		</dependency>
 		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-loader</artifactId>
+		    <version>2.3.2.RELEASE</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
@@ -114,11 +119,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+				    <includeSystemScope>true</includeSystemScope>
+				</configuration>
 				<executions>
 			        <execution>
 			            <id>build-info</id>
 			            <goals>
 			                <goal>build-info</goal>
+			                <goal>repackage</goal>
 			            </goals>
 			        </execution>
 			    </executions>
