--- a/TourGuide2_microService_GpsUtil/src/main/resources/application.properties
+++ b/TourGuide2_microService_GpsUtil/src/main/resources/application.properties
@@ -2,8 +2,7 @@ spring.application.name=microservice-gpsUtil
 
 server.port= 9001
 
-eureka.client.serviceUrl.defaultZone= http://localhost:9102/eureka/
+eureka.client.serviceUrl.defaultZone= http://discovery:9102/eureka/
 eureka.client.fetchRegistry=true
-Ribbon.eureka.enabled=true
 
-microservice-gpsUtil.ribbon.listOfServers = http://localhost:9001
+
