--- a/TourGuide2_microService_GpsUtil/pom.xml
+++ b/TourGuide2_microService_GpsUtil/pom.xml
@@ -84,6 +84,12 @@
 		    <artifactId>jacoco-maven-plugin</artifactId>
 		    <version>0.8.5</version>
 		</dependency>
+				<dependency>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>
+						spring-boot-starter-actuator
+					</artifactId>
+				</dependency>
 	</dependencies>
 	
 	<reporting>
