--- a/TourGuide2_microService_GpsUtil/src/main/resources/application.properties
+++ b/TourGuide2_microService_GpsUtil/src/main/resources/application.properties
@@ -6,3 +6,7 @@ eureka.client.serviceUrl.defaultZone= http://discovery:9102/eureka/
 eureka.client.fetchRegistry=true
 
 
+eureka.instance.statusPageUrlPath:http://localhost:9001/actuator/info
+
+
+
